# goit-pythonweb-hw-08

Chapter_07/example_sql/: db.py
fast_api_project/: pyproject.toml
fast_api_project/api/: main.py
fast_api_project/api/databases/: models.py
fast_api_project/api/repository/: owners.py
fast_api_project/api/routers/: cats.py
fast_api_project/api/schemas/: owners.py
fast_api_project/api/settings/: base.py
src/: main.py  pyproject.toml
src/api/: __init__.py
src/database/: connect.py  models copy.py  models.py
src/repository/: contacts.py
src/routers/: contacts.py  owners.py
src/schemas/: contact.py
src/settings/: base.py  config.ini
